--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "tailwindcss": ">=2.0.0"
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
   },
   "devDependencies": {
     "autoprefixer": "^10.0.2",
@@ -29,8 +29,8 @@
     "clean-css": "^4.2.1",
     "concurrently": "^5.3.0",
     "live-server": "^1.2.1",
-    "postcss": "^8.1.7",
-    "tailwindcss": "^2.0.3"
+    "postcss": "^7.0.0",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
   },
   "dependencies": {
     "mini-svg-data-uri": "^1.2.3"
