--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.2",
@@ -30,7 +30,7 @@
     "concurrently": "^5.3.0",
     "live-server": "^1.2.1",
     "postcss": "^7.0.0",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat"
   },
   "dependencies": {
     "mini-svg-data-uri": "^1.2.3"
